# ehsd-lab-2

./: .gitignore  README.md
data/: qfn_1.txt  qfn_3.txt  qfn_7.txt  qfn_gnd_1.txt  qfn_gnd_3.txt  qfn_gnd_7.txt  qfn_vcc_1.txt  qfn_vcc_3.txt  qfn_vcc_7.txt  soic_1.txt  soic_3.txt  soic_7.txt  soic_gnd_1.txt  soic_gnd_3.txt  soic_gnd_7.txt  soic_vcc_1.txt  soic_vcc_3.txt  soic_vcc_7.txt
lab_results/: 1_output_QNF_GND_bounceRefCurve_2024-12-03_1_095753.Wfm.csv  1_output_QNF_GND_bounceRefCurve_2024-12-03_1_095753.csv  1_output_QNF_VCC_bounceRefCurve_2024-12-03_1_095502.Wfm.csv  1_output_QNF_VCC_bounce_RefCurve_2024-12-03_1_095502.csv  1_output_SOIC_GND_bounceRefCurve_2024-12-03_1_095943.Wfm.csv  1_output_SOIC_GND_bounceRefCurve_2024-12-03_1_095943.csv  1_output_SOIC_VCC_bounceRefCurve_2024-12-03_1_100139.Wfm.csv  1_output_SOIC_VCC_bounceRefCurve_2024-12-03_1_100139.csv  3_output_QNF_GND_bounceRefCurve_2024-12-03_1_101256.Wfm.csv  3_output_QNF_GND_bounceRefCurve_2024-12-03_1_101256.csv  3_output_QNF_VCC_BouhceRefCurve_2024-12-03_1_101516.Wfm.csv  3_output_QNF_VCC_BouhceRefCurve_2024-12-03_1_101516.csv  3_output_SOIC_GND_bounceRefCurve_2024-12-03_1_101745.Wfm.csv  3_output_SOIC_GND_bounceRefCurve_2024-12-03_1_101745.csv  3_output_SOIC_VCC_bounceRefCurve_2024-12-03_1_102012.Wfm.csv  3_output_SOIC_VCC_bounceRefCurve_2024-12-03_1_102012.csv  7_output_QNF_GND_bounceRefCurve_2024-12-03_1_102240.Wfm.csv  (+11 more)
notebooks/: get_tl_model.py  notebook.ipynb  pyproject.toml  signal_reconstruction.ipynb  sim_plot.ipynb
notebooks/.ipynb_checkpoints/: signal_reconstruction-checkpoint.ipynb
(+11 files in other folders)
