[tool.poetry]
name = "python-notebooks"
version = "0.1.0"
description = ""
authors = ["andreasp <andreas.s.p00@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"
jupyterlab = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
